fix login and register squished styling

--- a/client/src/Components/styles/App.scss
+++ b/client/src/Components/styles/App.scss
@@ -6,6 +6,7 @@
 }
 
 .app {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
