--- a/client/src/Components/styles/Login.scss
+++ b/client/src/Components/styles/Login.scss
@@ -1,6 +1,7 @@
 @import './Variables.scss';
 
 .login {
+  width: 100%;
   display: flex;
   flex-direction: column;
 
@@ -40,7 +41,7 @@
   }
 
   .login__button--confirm {
-    background-color: rgb(134, 241, 134);
+    background-color: $login;
   }
 
   .login__button--register {
