--- a/client/src/Components/styles/Register.scss
+++ b/client/src/Components/styles/Register.scss
@@ -1,6 +1,7 @@
 @import './Variables.scss';
 
 .register {
+  width: 100%;
   display: flex;
   flex-direction: column;
 
