--- a/client/src/Components/styles/Variables.scss
+++ b/client/src/Components/styles/Variables.scss
@@ -3,3 +3,6 @@ $englishViolet: #6B4E71;
 $charcoal: #3A4454;
 $darkElectricBlue: #53687E;
 $mistyRose: #F5DDDD;
+$login: rgb(107, 159, 85);
+$register: rgb(193, 165, 5);
+$logout: rgb(225, 82, 82);
